--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ But it must have the following features:
 
   <body>
     <div>
-      <img src="./assets/images/Motivation-unsplash.jpg" alt="Motivational image">
+      <img src="./Motivation-unsplash.jpg" alt="Motivational image">
       <h1>Hustle, do not stop</h1>
       <p>When you find the perfect non-motivational image</p>
     </div>
